// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrameComponent should render the template when the vm is not provided 1`] = `
<div
  id="root1"
  ng-version="19.2.9"
>
  <app-frame>
    <section
      class="flex flex-col gap-y-5"
    >
      <!--container-->
      <div>
        Should be projected
      </div>
    </section>
    <!--container-->
  </app-frame>
</div>
`;

exports[`FrameComponent should render the template when the vm is provided 1`] = `
<div
  id="root0"
  ng-version="19.2.9"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-5"
    >
      <h2>
        Our Products
      </h2>
      <!--container-->
      <div>
        Should be projected
      </div>
    </section>
    <!--container-->
  </app-frame>
</div>
`;
